# generation-free-video-representations

./: .gitignore  LICENSE  README.md
demo/: index.html  styles.css
docs/: CAUSAL_EXPERIMENT_NOTES_ZH.md  EXPERIMENT_SUMMARY_ZH.md  FIGURE_INDEX_ZH.md  PROJECT_STORY_ZH.md  PROVENANCE.md  REPRODUCIBILITY.md  cosmos2_architecture.html  wm_dynamic_latent_pipeline.html
experiments/causal_denoise_probe/: ORIGINAL_README.md  aggregate_history_sweep.py  cosmos_causal_probe.py  run_cfg_sequence_sweep.sh  run_eval.sh  run_history_sigma_steps_sweep.sh
experiments/domino_denoise_probe/: EXPERIMENT.md  ORIGINAL_README.md  UV_ONLY_EXPERIMENT.md  pyproject.toml  requirements.txt
experiments/domino_denoise_probe/configs/: default.yaml  uv_only.yaml
experiments/domino_denoise_probe/scripts/: run_experiment.sh  run_uv_experiment.sh
experiments/domino_denoise_probe/src/domino_cosmos_probe/: __init__.py  build_slices.py  config.py  cosmos_features.py  data.py  extract_features.py  probes.py  summarize.py  summarize_uv.py  train_probes.py  train_uv_probes.py  uv_models.py  video.py
experiments/world_model_probe/: ORIGINAL_README.md
experiments/world_model_probe/configs/: cosmos_probe.yaml  (+2 more)
integrations/starvla_domino/: README.md  deploy_policy.yml  model2robotwin_interface.py
results/: README.md
results/async_domino_eval/: adjust_bottle_async_summary.json  adjust_bottle_sync_3step_summary.json
results/domino_denoise_probe/: contact_frames_three_tasks.csv
results/latent_motion_probe/: single_pair_metrics.json
tools/: analyze_latent_motion.py  summarize_async_eval.py
(+113 files in other folders)
