[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domino-cosmos-denoise-probe"
version = "0.1.0"
description = "Offline latent-space denoising probes for DOMINO with frozen Cosmos-Predict2."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
